--- a/src/main/resources/email-templates/fr/confirmation-email-template.html
+++ b/src/main/resources/email-templates/fr/confirmation-email-template.html
@@ -11,6 +11,7 @@
             border: none;
             padding: 10px;
         }
+
         .validation-button {
             background-color: deepskyblue;
         }
@@ -19,9 +20,10 @@
             background-color: indianred;
         }
 
-        button{
+        button {
             ba: red;
         }
+
         .button-container {
             margin: 10px;
         }
@@ -34,12 +36,18 @@
 <body>
 <div>
     <div>
-        <p>Bonjour <span th:utext="${userName}" ></span>,</p>
+        <p>Bonjour <span th:utext="${username}"></span>,</p>
         <p>Voici le résumé de votre annonce Anti Gaspi</p>
     </div>
     <div>
-        <p>Titre : <span class="text-bold" th:utext="${offerTitle}"></span></p>
-        <p>Description : <span th:utext="${offerDescription}"></span></p>
+        <p>Titre : <span class="text-bold" th:utext="${title}"></span></p>
+        <p>Adresse : <span class="text-bold" th:utext="${address}"></span></p>
+        <p>Description : <span th:utext="${description}"></span></p>
+    </div>
+
+    <div>
+        <p>Votre annonce sera disponible du : <span class="text-bold" th:utext="${availabilityDate}"></span> au <span
+                class="text-bold" th:utext="${expirationDate}"></span></p>
     </div>
 
     <div class="button-container">
