--- a/src/main/resources/email-templates/fr/confirmation-email-template.html
+++ b/src/main/resources/email-templates/fr/confirmation-email-template.html
@@ -51,10 +51,10 @@
     </div>
 
     <div class="button-container">
-        <a th:href="@{${validateLink}}">
+        <a th:href="@{${validateLink}}" target="_blank">
             <button type="button" class="validation-button">Valider l'annonce</button>
         </a>
-        <a th:href="@{${deleteLink}}">
+        <a th:href="@{${deleteLink}}" target="_blank">
             <button type="button" class="deletion-button">Supprimer l'annonce</button>
         </a>
     </div>
