--- a/src/test/resources/email-template.fr/confirmation-email-test.html
+++ b/src/test/resources/email-template.fr/confirmation-email-test.html
@@ -51,10 +51,10 @@
     </div>
 
     <div class="button-container">
-        <a href="http://validation.com">
+        <a href="http://validation.com" target="_blank">
             <button type="button" class="validation-button">Valider l'annonce</button>
         </a>
-        <a href="">
+        <a href="" target="_blank">
             <button type="button" class="deletion-button">Supprimer l'annonce</button>
         </a>
     </div>
