send email test completed

--- a/src/main/resources/email-templates/fr/confirmation-email-template.html
+++ b/src/main/resources/email-templates/fr/confirmation-email-template.html
@@ -51,7 +51,7 @@
     </div>
 
     <div class="button-container">
-        <a th:href="@{${validateLink}}" target="_blank">
+        <a th:href="@{${validationLink}}" target="_blank">
             <button type="button" class="validation-button">Valider l'annonce</button>
         </a>
         <a th:href="@{${deleteLink}}" target="_blank">
